--- a/app/src/main/res/drawable/border_component.xml
+++ b/app/src/main/res/drawable/border_component.xml
@@ -4,12 +4,11 @@
     <item>
         <shape>
             <solid android:color="#ffffff" />
-            <corners android:radius="5dp"></corners>
+            <corners android:radius="5dp" />
 
         </shape>
     </item>
 
-    <!-- main color -->
     <item
         android:bottom="1.5dp"
         android:left="1.5dp"
@@ -17,11 +16,10 @@
         android:top="1.5dp">
         <shape>
             <solid android:color="#000000" />
-            <corners android:radius="5dp"></corners>
+            <corners android:radius="5dp" />
         </shape>
     </item>
 
-    <!-- draw another block to cut-off the left and right bars -->
     <item
         android:bottom="4dp"
         android:left="4dp"
@@ -33,7 +31,7 @@
                 android:bottom="8dp"
                 android:left="8dp"
                 android:right="8dp"
-                android:top="8dp"></padding>
+                android:top="8dp" />
 
         </shape>
     </item>
