--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="list_item_title">#fff</color>
+    <color name="list_background">#E7E3E7</color>
+    <color name="list_background_pressed">#992416</color>
+    <color name="list_divider">#272727</color>
 </resources>
