--- a/app/src/main/res/layout/content_gate365.xml
+++ b/app/src/main/res/layout/content_gate365.xml
@@ -1,11 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical"
-              tools:context=".Gate365Activity"
-              tools:showIn="@layout/activity_gate365">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context=".Gate365Activity"
+    tools:showIn="@layout/activity_gate365">
 
-    <include layout="@layout/toolbar"/>
+    <include layout="@layout/toolbar" />
+
+    <android.support.v4.widget.DrawerLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/drawer_layout_gate365"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <FrameLayout
+            android:id="@+id/frame_gate365"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <ListView
+            android:id="@+id/list_gate365"
+            android:layout_width="240dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:background="@color/colorListBackground"
+            android:choiceMode="singleChoice"
+            android:divider="@color/colorListDivider"
+            android:dividerHeight="1dp"
+            android:listSelector="@drawable/list_selector" />
+
+    </android.support.v4.widget.DrawerLayout>
 </LinearLayout>
