--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorListDivider">#272727</color>
+    <color name="colorListBackground">#E7E3E7</color>
+    <color name="colorListPressed">#992416</color>
+    <color name="colorListActivated">#991155</color>
 </resources>
